# BioInfo

./: .gitignore  CLAUDE.md  IDEAS.md  PROJECTS.md  README.md  SKILLS.md  TEMPLATE_PROJECT_CLAUDE.md  TEMPLATE_TP_README.md
phylo-builder/: CLAUDE.md  ROADMAP.md  main.py  pyproject.toml
phylo-builder/data/: example.fasta
phylo-builder/src/: distances.py
phylo-builder/subjects/TP01_distance_matrices/: README.md
phylo-builder/tests/: test_distances.py
sequence-aligner/: CLAUDE.md  ROADMAP.md  SYNTHESIS.md  main.py  pyproject.toml
sequence-aligner/data/: human.fna  nuc_simple.mat
sequence-aligner/src/: affine_alignment.py  benchmark.py  main.py  needleman_wunsch.py  scoring.py  sequences.py  smith_waterman.py  visualize.py
sequence-aligner/subjects/TP01_sequences_basics/: README.md  REVIEW.md  skeleton.py  test_skeleton.py
sequence-aligner/subjects/TP01_sequences_basics/data/: example.fasta
sequence-aligner/subjects/TP02_global_alignment/: README.md  REVIEW.md
sequence-aligner/subjects/TP03_substitution_matrices/: README.md  REVIEW.md
sequence-aligner/subjects/TP04_local_alignment/: README.md  REVIEW.md
sequence-aligner/subjects/TP05_affine_semiglobal/: README.md  REVIEW.md
sequence-aligner/subjects/TP06_benchmark_visualisation/: README.md  REVIEW.md
sequence-aligner/tests/: test_affine_alignment.py  test_benchmark.py  test_needleman_wunsch.py  test_scoring.py  test_sequences.py  test_smith_waterman.py  test_visualize.py
templates/: CMakeLists.txt  project_CLAUDE.md  pyproject_algo.toml  pyproject_dl.toml  pyproject_lib.toml  roadmap.md  tp_README.md  tp_REVIEW.md
